--- a/_includes/head.html
+++ b/_includes/head.html
@@ -31,6 +31,15 @@
   <script type="text/javascript" src="/js/highlightjs/languages/tsql.min.js"></script>
 
   <script type="text/javascript"> hljs.highlightAll(); </script>
-  <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+  <script type="text/javascript" id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+  </script>
+  <script>
+  window.MathJax = {
+    tex: {
+      inlineMath: [['$', '$']],
+      displayMath: [['$$', '$$']]
+    }
+  };
+  </script>
   <!-- end highlight.js support -->
 </head>
